# Google-Calendar-Integration-Django-Rest-API

./: README.md  db.sqlite3  pyproject.toml
rest/: credentials.json  views.py
tutorial/: settings.py
