[tool.poetry]
name = "repl_nix_Google-Calendar-Integration-Django-Rest-API"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
google-api-python-client = "^2.79.0"
google-auth-oauthlib = "^1.0.0"
xds-protos = "^0.0.11"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
